# GameEngine

./: README.md  makefile
Game/: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  imgui.ini  main.cpp  makefile  vcpkg.json
Game/.cache/clangd/index/: CardGame.cpp.2AD73F975562CEA7.idx  CardGame.h.BD6E08858BF4DE82.idx  main.cpp.FE01E6A4C6C01B36.idx
Game/include/: CardGame.h  Game_Scene.h  Lobby.h  Lobby_Scene.h  Menu_Scene.h  eui.h
Game/lib/: Makefile  cmake_install.cmake
Game/lib/GameEngine/: CMakeLists.txt  Makefile  library.h
Game/src/: CardGame.cpp  Lobby.cpp  Lobby_Scene.cpp  main.cpp
Game/tests/: test_ui.cpp
GameEngine/: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  makefile  vcpkg.json
GameEngine/.cache/clangd/index/: Application.cpp.15D5D523318E706F.idx  Application.cpp.84ED2123BF791163.idx  Application.cpp.8AB7C21AEC61108C.idx  Application.h.10209D139EFB61A4.idx  ApplicationFactory.h.3D96729A06B0F5DD.idx  ApplicationFactoryTestUtils.h.2AE62BCED3BEE01B.idx  ApplicationTests.cpp.516C198BDC26034B.idx  ApplicationWindow.cpp.CEFA97A1F9438360.idx  ApplicationWindow.h.5A3B5F517B3F98D5.idx  Network.cpp.6679825C3D22F3C4.idx  Network.cpp.681B428053A3436B.idx  Network.cpp.7A1C3F7780447AA0.idx  Network.h.54B4CD07FFF7AD71.idx  NetworkTests.cpp.68A706D0DB65E114.idx
GameEngine/include/GameEngine/: Application.h  ApplicationFactory.h  ApplicationWindow.h  Game.h  Game_Manager.h  Game_Object.h  Network.h  Scene.h  emath.h  library.h
GameEngine/include/GameEngine/networking/: Client.h  Network.h  Rpc_Manager.h
GameEngine/include/GameEngine/ui/: eui.h
GameEngine/src/: Application.cpp  ApplicationWindow.cpp  Game.cpp  Game_Manager.cpp  Game_Object.cpp  Main.cpp  Network.cpp  library.cpp
GameEngine/src/networking/: Client.cpp  Network.cpp  Rpc_Manager.cpp
GameEngine/src/ui/: button.cpp  container.cpp  context.cpp  element.cpp  eui.cpp  hbox.cpp  text.cpp  vbox.cpp
GameEngine/tests/: ApplicationFactoryTestUtils.h  ApplicationTests.cpp  CMakeLists.txt  GameTests.cpp  NetworkTests.cpp
engine/: .clang-format  CMakeLists.txt  Makefile
engine/include/engine/: application.h  application_factory.h  emath.h  game_manager.h  game_object.h  game_object_ui.h  game_ui_manager.h  player.h  scene.h
engine/include/engine/networking/: network.h  rpc_manager.h
engine/include/engine/ui/: eui.h
engine/src/: application.cpp  game_manager.cpp  game_object.cpp  game_ui_manager.cpp
engine/src/networking/: network.cpp  rpc_manager.cpp
engine/src/ui/: button.cpp  context.cpp  hbox.cpp  text.cpp  vbox.cpp
engine/tests/: CMakeLists.txt  application_factory_test_utils.h  application_tests.cpp  network_tests.cpp
game/: .clang-format  .gitignore  CMakeLists.txt  Makefile  vcpkg.json
game/include/: card.h  card_game.h  card_player.h  card_ui.h  deck.h  deck_ui.h  game_scene.h  lobby_scene.h  menu_scene.h  path.h  test_object.h  tower.h  tower_card.h  tower_ui.h  unit.h  unit_card.h  unit_ui.h
game/src/: card.cpp  card_game.cpp  deck.cpp  game_scene.cpp  lobby_scene.cpp  main.cpp  tower.cpp  unit.cpp
game/tests/: main.cpp  test_ui.cpp
